--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
@@ -29,6 +29,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="https://kr1-maps.api.nhncloudservice.com/maps/v3.0/appkeys/SBTMTnsUOz5CKYSQ/maps?callback=initMap"
+    ></script>
+    <script type="text/javascript">
+      function initMap() {
+        window.pokeRunnerInavi = inavi;
+      }
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
